# pico-blink-noboot2

./: .gitmodules  CMakeLists.txt  blink.c
